fixed merging and moving forums, `delete_all_parsed_permissions` method, OpenAPI permissions
