# openapi.yaml
@@ -2,7 +2,7 @@ openapi: 3.0.1
 info:
   description: A forum API.
   title: Heiwa
-  version: 0.13.42
+  version: 0.13.43
 paths:
   /forums:
     get:
@@ -74,8 +74,8 @@ components:
           type: boolean
           description: Whether or not this user is banned.
         parsed_permissions:
-          type: object
-          # TODO: properties
+          allOf:
+            - $ref: "#/components/schemas/Permissions"
           description: This user\'s parsed permissions.
         encrypted_private_key:
           type: string
@@ -299,6 +299,138 @@ components:
           allOf:
             - $ref: "#/components/schemas/VoteValue"
           description: The computed value of this post\'s votes.
+    Permissions:
+      type: object
+      properties:
+        forum_create:
+          type: boolean
+          description: Whether or not a user can create forums.
+        forum_delete_own:
+          type: boolean
+          description: Whether or not a user can delete their own forums.
+        forum_delete_any:
+          type: boolean
+          description: Whether or not a user can delete any forum.
+        forum_edit_own:
+          type: boolean
+          description: Whether or not a user can edit their own forums.
+        forum_edit_any:
+          type: boolean
+          description: Whether or not a user can edit any forum.
+        forum_merge_own:
+          type: boolean
+          description: "Whether or not a user can merge their own forums
+          with other forums they've created."
+        forum_merge_any:
+          type: boolean
+          description: Whether or not a user can merge any forum with any forum.
+        forum_move_own:
+          type: boolean
+          description: "Whether or not a user can move their forums to other
+          forums they've created."
+        forum_move_any:
+          type: boolean
+          description: Whether or not a user can move any forum to any forum.
+        forum_view:
+          type: boolean
+          description: Whether or not a user can view forums.
+        group_create:
+          type: boolean
+          description: Whether or not a user can create groups.
+        group_delete:
+          type: boolean
+          description: Whether or not a user can delete groups.
+        group_edit:
+          type: boolean
+          description: Whether or not a user can edit groups.
+        group_edit_permissions:
+          type: boolean
+          description: Whether or not a user can edit groups' permissions.
+        post_create:
+          type: boolean
+          description: Whether or not a user can create posts.
+        post_delete_own:
+          type: boolean
+          description: Whether or not a user can delete their own posts.
+        post_delete_any:
+          type: boolean
+          description: Whether or not a user can delete any post.
+        post_edit_own:
+          type: boolean
+          description: Whether or not a user can edit their own posts.
+        post_edit_any:
+          type: boolean
+          description: Whether or not a user can edit any post.
+        post_edit_vote:
+          type: boolean
+          description: Whether or not a user can vote on posts.
+        post_move_own:
+          type: boolean
+          description: "Whether or not a user can move their own posts to their
+          own threads."
+        post_move_any:
+          type: boolean
+          description: Whether or not a user can move any post to any thread.
+        post_view:
+          type: boolean
+          description: Whether or not a user can view posts.
+        thread_create:
+          type: boolean
+          description: Whether or not a user can create threads.
+        thread_delete_own:
+          type: boolean
+          description: Whether or not a user can delete their own threads.
+        thread_delete_any:
+          type: boolean
+          description: Whether or not a user can delete any thread.
+        thread_edit_own:
+          type: boolean
+          description: Whether or not a user can edit their own threads.
+        thread_edit_any:
+          type: boolean
+          description: Whether or not a user can edit any thread.
+        thread_edit_lock_own:
+          type: boolean
+          description: Whether or not a user can lock their own threads.
+        thread_edit_lock_any:
+          type: boolean
+          description: Whether or not a user can lock any thread.
+        thread_edit_pin:
+          type: boolean
+          description: Whether or not a user can pin threads.
+        thread_edit_vote:
+          type: boolean
+          description: Whether or not a user can vote on threads.
+        thread_merge_own:
+          type: boolean
+          description: "Whether or not a user can merge their own threads with
+          other threads they've created."
+        thread_merge_any:
+          type: boolean
+          description: Whether or not a user can merge any thread with any thread.
+        thread_move_own:
+          type: boolean
+          description: "Whether or not a user can move their own threads to
+          forums they've created."
+        thread_move_any:
+          type: boolean
+          description: Whether or not a user can move any thread to any forum.
+        thread_view:
+          type: boolean
+          description: Whether or not a user can view threads.
+        user_delete:
+          type: boolean
+          description: Whether or not a user can delete other users.
+        user_edit_ban:
+          type: boolean
+          description: Whether or not a user can ban other users.
+        user_edit_groups:
+          type: boolean
+          description: Whether or not a user can modify other users' groups.
+        user_edit_permissions:
+          type: boolean
+          description: Whether or not a user can modify other users' permissions.
+      description: Permissions.
     Id:
       type: string
       format: uuid
